<resources>
    <string name="app_name">Calculator</string>
    <string name="heading">HEADING</string>
    <string name="opposite">+/-</string>
    <string name="c">C</string>
    <string name="ac">AC</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="sqrt">sqrt</string>
    <string name="x_2">x^2</string>R
    <string name="x_y">x^y</string>
    <string name="log">log</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="div">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiply">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="sub">-</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="calc">=</string>
    <string name="add">+</string>
    <string name="about_txt">Calculator app that allows user to:\nmake simple calculations\nmake advanced calculations \nverticalhorizontal orientation</string>
    <string name="creator_personal_data">by Ksawery Szwankowski</string>
    <string name="app_name_txt">Calculator app</string>
    <string name="calc_value">0</string>
    <string name="ec">EC</string>
</resources>