<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name_txt"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

    <TextView
        android:id="@+id/creator_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/creator_personal_data"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/app_name"
        app:layout_constraintStart_toStartOf="@+id/app_name"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <TableRow
        android:id="@+id/about_text_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/creator_name"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="@+id/creator_name"
        app:layout_constraintStart_toStartOf="@+id/creator_name"
        app:layout_constraintTop_toBottomOf="@+id/creator_name">

        <TextView
            android:id="@+id/about_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="4"
            android:singleLine="false"
            android:text="@string/about_txt"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"></TextView>
    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>